example-1-terraform-networking/vpc/03-subnets.tf
resource "aws_subnet" "my_vpc_public_subnets" {
    vpc_id = aws_vpc.my_vpc.id
    count = length(var.public_subnets_cidr)

    map_public_ip_on_launch = true
    cidr_block = var.public_subnets_cidr[count.index]
    availability_zone = var.availability_zones[count.index]

    tags = {
        Name = "my-vpc-public-subnet-${count.index}"
    }
}

resource "aws_subnet" "my_vpc_private_subnets" {
    vpc_id = aws_vpc.my_vpc.id
    count = length(var.private_subnets_cidr)

    map_public_ip_on_launch = false
    cidr_block =  var.private_subnets_cidr[count.index]
    availability_zone = var.availability_zones[count.index]

    tags = {
        Name = "my-vpc-private-subnet-${count.index}"
    }
}
